# AIE6-S08-adv-rag-evaluation

./: .env.example  .envrc  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: evaluation_config.py  rag_config.py
data/raw/: sample_docs.txt
notebooks/: Step_01_ragas_evaluation.ipynb  Step_02_results_analysis.ipynb
src/: __init__.py
src/evaluation/: __init__.py  compare_results.py  evaluate_baseline_rag.py  evaluate_semantic_rag.py
src/graph/: nodes.py  schema.py
src/rag/: baseline_rag_app.py  semantic_rag_app.py
src/retrieval/: __init__.py  naive_retriever.py  semantic_chunker.py
